utillib = static_library('util',
		'access.c', 'base64.c', 'config.c', 'datetime.c', 'hex.c', 'inaddr.c', 'jid.c', 'jqueue.c', 'jsignal.c', 'log.c', 'md5.c', 'nad.c', 'pool.c', 'rate.c', 'serial.c', 'sha1.c', 'stanza.c', 'str.c', 'xdata.c', 'xhash.c', 'crypt_blowfish.c',
		include_directories : inc,
		dependencies : expat_dep)
